fix input overflow

--- a/gulp/styles/main.scss
+++ b/gulp/styles/main.scss
@@ -174,6 +174,11 @@ main.main {
 }
 .input__wrap{
     position: relative;
+    input{
+        white-space: nowrap;
+        overflow: hidden;
+        text-overflow: ellipsis;
+    }
 }
 /* Customize website's scrollbar like Mac OS
 Not supports in Firefox and IE */
